@@ -1,3 +1,4 @@
+Made the light bulbs occasionally radiate a thermal energy chunk.  Incandescent bulb radiates more of them than fluorescent.
 Changed the algorithm for spacing out energy chunks on the solar panel so that they won't build up on the panel.
 Made it so that energy chunks that are being pulled out of the air by cooling won't turn around if they are close to the burner.
 Fixed an issue where the quantity of energy chunks exchanged with the air was too high when the burner was heating or cooling with nothing on it.
